src/App.css
@import url('https://fonts.googleapis.com/css2?family=Matemasie&family=Permanent+Marker&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Matemasie&family=Permanent+Marker&family=Special+Elite&display=swap');

.App {
  text-align: center;
  overflow-x: hidden;
  background-color: #082;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
  max-width: 200px;
  max-height: 200px;
}
.main-title {
  color: rgb(255, 255, 255);
  font-family: "Matemasie", sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 3rem;
}
@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotateY(0deg);
  }
  to {
    transform: rotateY(360deg);
  }
}

.special-elite {
  font-family: "Special Elite", system-ui;
  font-weight: 400;
  font-style: normal;
}

.mission-container {
  display: flex;
  justify-content: space-around;
  margin-left: auto;
  margin-right: auto;
}

h2 {
  color:#E03C2B;
}

p {
  margin-left: auto;
  margin-right: auto;
}

.modal-btn {
  width: 75px;
  position: fixed;
  right: 5%;
  bottom: 5%;
  z-index: 5;
}
.modal-btn img {
  width:75px;
}

